--- a/.github/workflows/images-sync.yaml
+++ b/.github/workflows/images-sync.yaml
@@ -4,9 +4,9 @@ run-name: ${{ github.actor }} is Sync Images to personal imageHub.
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
-    branches: ['main']
+    branches: ["main"]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -31,10 +31,16 @@ jobs:
         if: contains(env.CHANGED_FILES, 'imageFile')
         id: read_image_file
         run: |
-          IMAGE=$(awk 'NF' imageFile | tail -n 1)
+          # 读取最后一行并解析镜像和架构
+          LINE=$(awk 'NF' imageFile | tail -n 1)
+          IMAGE=$(echo $LINE | awk '{print $1}')
+          ARCH=$(echo $LINE | awk '{print $2}')
+          # 默认架构
+          if [ -z "$ARCH" ]; then ARCH="amd64"; fi
           IMAGE_NAME=$(echo $IMAGE | awk -F/ '{print $NF}')
           echo "ORIGIN_DOCKER_IMAGE=$IMAGE" >> $GITHUB_ENV
           echo "MY_DOCKER_IMAGE=$IMAGE_NAME" >> $GITHUB_ENV
+          echo "IMAGE_ARCH=$ARCH" >> $GITHUB_ENV
 
       - name: Login to ghrc Repo
         uses: lyarmor/image-sync@main
@@ -47,5 +53,5 @@ jobs:
       - name: Use Skopeo Tools Sync Image to gitHub
         run: |
           #!/usr/bin/env bash
-          skopeo copy docker://docker.io/${{ env.ORIGIN_DOCKER_IMAGE }} docker://${{ secrets.REPO_URL }}/lyarmor/${{ env.MY_DOCKER_IMAGE }}
+          skopeo copy --override-arch ${{ env.IMAGE_ARCH }} docker://docker.io/${{ env.ORIGIN_DOCKER_IMAGE }} docker://${{ secrets.REPO_URL }}/lyarmor/${{ env.MY_DOCKER_IMAGE }}
           docker logout
